--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,7 @@
-/*  your css code here. If applicable */
+.container::before{
+	content:"Before Element";
+	color:rgb(255, 0, 0);
+}
+.container::after{
+	content:"After Element";
+	color:rgb(255, 0, 0);
